# arc-platform

./: .gitignore  404.html  Makefile  README.md  ROADMAP.md  SERVICE.MD  arc.yaml  index.html  platform-overview.md
.github/: CODEOWNERS  labeler.yml  pull_request_template.md  release-drafter.yml
001-otel-setup/: plan.html  spec.html  tasks.html
002-cortex-setup/: plan.html  spec.html  tasks.html
003-messaging-setup/: plan.html  spec.html  tasks.html
004-dev-setup/: analysis-report.html  plan.html  spec.html  tasks.html
005-data-layer/: analysis-report.html  plan.html  spec.html  tasks.html
006-platform-control/: analysis-report.html  plan.html  spec.html  tasks.html
007-voice-stack/: analysis-report.html  plan.html  spec.html  tasks.html
008-specs-site/: analysis-report.html  plan.html  spec.html  tasks.html
assets/: 001-otel-setup_spec.md.BHd6hAPQ.lean.js  001-otel-setup_tasks.md.D_CQARTI.lean.js  002-cortex-setup_plan.md.DlPEh7ZS.lean.js  002-cortex-setup_spec.md.DG2hAMjD.js  002-cortex-setup_spec.md.DG2hAMjD.lean.js  002-cortex-setup_tasks.md.Bc8ezTpE.js  002-cortex-setup_tasks.md.Bc8ezTpE.lean.js  003-messaging-setup_plan.md.DMdFC9aL.js  003-messaging-setup_spec.md.CKnp52Jp.js  003-messaging-setup_tasks.md.DFaywxhE.js  003-messaging-setup_tasks.md.DFaywxhE.lean.js  004-dev-setup_analysis-report.md.zmCUTB_u.js  004-dev-setup_analysis-report.md.zmCUTB_u.lean.js  004-dev-setup_plan.md.CPkhwPTl.js  004-dev-setup_plan.md.CPkhwPTl.lean.js  004-dev-setup_tasks.md.5EPd5Uoh.js  005-data-layer_analysis-report.md.5XkfcwyO.lean.js  005-data-layer_plan.md.C00Fijkr.js  005-data-layer_plan.md.C00Fijkr.lean.js  005-data-layer_spec.md.dySPcQQ4.js  005-data-layer_spec.md.dySPcQQ4.lean.js  005-data-layer_tasks.md.Jgm52tnN.js  006-platform-control_analysis-report.md.P4QhPg4d.lean.js  006-platform-control_plan.md.DgU75QTF.js  006-platform-control_plan.md.DgU75QTF.lean.js  007-voice-stack_plan.md.JSM7CcuF.js  007-voice-stack_spec.md.DS9Uslqc.js  007-voice-stack_spec.md.DS9Uslqc.lean.js  008-specs-site_analysis-report.md.CGxNJthX.js  008-specs-site_plan.md.Dymvbpj6.js  008-specs-site_tasks.md.C9Uo4ocX.lean.js  app.prXq8eD6.js  index.md.Bqb9lKoL.js
dev-tools/: dev-tools.mk  docker-compose.yml
docs/: 404.html  hashmap.json  index.html  index.md  llms-full.txt  llms.txt  package-lock.json  package.json  services.md  specs.md
scripts/: Makefile  README.md  delete-org-packages.sh  generate-pr-description.sh  scripts.mk
services/: control.mk  data.mk  messaging.mk  profiles.yaml
services/reasoner/: Dockerfile  Dockerfile.base  docker-compose.yml  pyproject.toml  reasoner.mk  service.yaml
services/reasoner/async-docs/: index.html
services/reasoner/contracts/: asyncapi.yaml  openapi.yaml
services/reasoner/migrations/: 002_rename_schema_sherlock_to_reasoner.sql
services/reasoner/src/reasoner/: __init__.py  config.py  embeddings_router.py  files_router.py  graph.py  interfaces.py  llm_factory.py  main.py  memory.py  models_router.py  models_v1.py  nats_handler.py  observability.py  openai_nats_handler.py  openai_router.py  pulsar_handler.py  streaming.py  vector_stores_router.py
services/reasoner/src/reasoner/providers/: __init__.py  anthropic_provider.py  base.py  compatible_provider.py  factory.py  google_provider.py  openai_provider.py
services/reasoner/src/reasoner/rag/: __init__.py  chunker.py  nats_handler.py  store.py
services/reasoner/src/reasoner/rag/adapters/: __init__.py  minio.py  pgvector.py  reranker.py
services/reasoner/src/reasoner/rag/application/: ingest.py  retrieve.py
services/reasoner/src/reasoner/rag/domain/: __init__.py  models.py  ports.py
services/reasoner/src/reasoner/rag/parsers/: __init__.py  base.py  csv_parser.py  docx_parser.py  json_parser.py  pdf_parser.py  text_parser.py
services/reasoner/src/sherlock/: __init__.py  config.py  embeddings_router.py  fake_router.py  files_router.py  graph.py  interfaces.py  llm_factory.py  main.py  memory.py  models_router.py  models_v1.py  nats_handler.py  observability.py  openai_nats_handler.py  openai_router.py  pulsar_handler.py  streaming.py  vector_stores_router.py
services/reasoner/src/sherlock/providers/: __init__.py  anthropic_provider.py  base.py  compatible_provider.py  factory.py  google_provider.py  openai_provider.py
services/reasoner/src/sherlock/rag/: __init__.py  chunker.py  nats_handler.py  store.py
services/reasoner/src/sherlock/rag/adapters/: embedder.py  minio.py  pgvector.py  reranker.py
services/reasoner/src/sherlock/rag/application/: ingest.py  retrieve.py
services/reasoner/src/sherlock/rag/domain/: __init__.py  models.py  ports.py
services/reasoner/src/sherlock/rag/parsers/: __init__.py  base.py  csv_parser.py  docx_parser.py  json_parser.py  pdf_parser.py  text_parser.py
services/reasoner/tests/: conftest.py  test_api.py  test_graph.py  test_memory.py  test_nats_handler.py  test_observability.py  test_openai_nats_handler.py  test_openai_router.py  test_providers.py  test_pulsar_handler.py  test_rag_routers.py  test_streaming.py
services/reasoner/tests/rag/: test_chunker.py  test_embedder.py  test_ingest.py  test_minio.py  test_models.py  test_parsers.py  test_reranker.py  test_retrieve.py
services/voice/: Dockerfile  docker-compose.yml  pyproject.toml  service.yaml  voice.mk
services/voice/contracts/: asyncapi.yaml  openapi.yaml
services/voice/src/voice/: __init__.py  config.py  health_router.py  interfaces.py  livekit_worker.py  main.py  models_v1.py  nats_bridge.py  observability.py  pulsar_events.py  stt_router.py  tts_router.py
services/voice/src/voice/providers/: stt_whisper.py  tts_piper.py
services/voice/tests/: conftest.py  test_config.py  test_health_router.py  test_interfaces.py  test_livekit_worker.py  test_load_latency.py  test_main.py  test_models_v1.py  test_nats_bridge.py  test_observability.py  test_pulsar_events.py  test_stt_router.py  test_tts_router.py
services/voice/tests/test_providers/: test_stt_whisper.py  test_tts_piper.py
specs/: index.md
(+1434 files in other folders)
